// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AnimatedList> can render without theme 1`] = `
<ul
  className="AnimatedList-sc-sdziqv-1"
>
  <li
    className="AnimatedList__Item-sc-sdziqv-0"
    style={
      Object {
        "height": "auto",
        "opacity": 1,
        "position": "absolute",
        "visibility": "hidden",
      }
    }
  >
    one
  </li>
  <li
    className="AnimatedList__Item-sc-sdziqv-0"
    style={
      Object {
        "height": "auto",
        "opacity": 1,
        "position": "absolute",
        "visibility": "hidden",
      }
    }
  >
    two
  </li>
  <li
    className="AnimatedList__Item-sc-sdziqv-0"
    style={
      Object {
        "height": "auto",
        "opacity": 1,
        "position": "absolute",
        "visibility": "hidden",
      }
    }
  >
    three
  </li>
</ul>
`;

exports[`<AnimatedList> without Object.entries renders a static list when react-spring is not supported 1`] = `
<ul
  className="AnimatedList-sc-sdziqv-1"
>
  <li
    className="AnimatedList__Item-sc-sdziqv-0"
  >
    one
  </li>
  <li
    className="AnimatedList__Item-sc-sdziqv-0"
  >
    two
  </li>
  <li
    className="AnimatedList__Item-sc-sdziqv-0"
  >
    three
  </li>
</ul>
`;
